Update HTML and CSS

--- a/src/style.css
+++ b/src/style.css
@@ -7,13 +7,47 @@
 body {
   display: flex;
   height: 100vh;
+  scrollbar-color: white cornflowerblue;
 }
 
 #menu {
-  width: 20%;
+  width: 300px;
   padding: 1rem;
+  overflow: auto;
   color: white;
+  flex: 0 0 300px;
+  margin-top: 4rem;
+  list-style: none;
   background: cornflowerblue;
+}
+
+#menu ul {
+  gap: 1rem;
+  width: 300;
+  display: flex;
+  font-size: 20px;
+  margin-top: 1rem;
+  overflow: hidden;
+  list-style: none;
+  font-weight: bold;
+  flex-direction: column;
+}
+
+#menu li {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+#menu .header-tasks {
+  top: 0;
+  left: 0;
+  display: flex;
+  padding: 1rem;
+  width: 300px;
+  position: fixed;
+  background: cornflowerblue;
+  border-bottom: solid white;
 }
 
 #content {
