Update HTML, CSS and JS

--- a/src/style.css
+++ b/src/style.css
@@ -20,13 +20,14 @@ form {
   border-radius: 10px;
 }
 
-form button {
+button {
   /* color: white; */
   border: none;
   font-size: 1rem;
   font-weight: bold;
   border-radius: 5px;
   padding: 0.5rem 1rem;
+  align-self: center;
 }
 
 form .buttons {
@@ -38,6 +39,7 @@ form .buttons {
 input,
 select {
   font-size: 18px;
+  padding: 5px;
 }
 
 #menu {
