--- a/src/style.css
+++ b/src/style.css
@@ -24,11 +24,12 @@ form {
 
 button {
   border: none;
+  cursor: pointer;
   font-size: 1rem;
   font-weight: bold;
+  align-self: center;
   border-radius: 5px;
   padding: 0.5rem 1rem;
-  align-self: center;
 }
 
 form .buttons {
@@ -81,6 +82,11 @@ select {
   text-overflow: ellipsis;
 }
 
+#menu button {
+  width: 7rem;
+  text-align: start;
+}
+
 #menu button:hover {
   color: white;
   background: cornflowerblue;
@@ -103,6 +109,7 @@ select {
 
 #content li {
   gap: 1rem;
+  cursor: pointer;
   display: flex;
   height: 5.5rem;
   overflow: auto;
