--- a/src/style.css
+++ b/src/style.css
@@ -14,11 +14,10 @@ form {
   gap: 1rem;
   width: 100%;
   display: flex;
-  padding: 1rem;
+  padding: 0.5rem;
   overflow: hidden;
   border-radius: 10px;
   flex-direction: column;
-  border: 1px solid royalblue;
   flex: 0 0 auto;
 }
 
@@ -26,6 +25,7 @@ button {
   border: none;
   cursor: pointer;
   font-size: 1rem;
+  max-height: 35px;
   font-weight: bold;
   align-self: center;
   border-radius: 5px;
@@ -123,6 +123,11 @@ select {
 #content li input[type="checkbox"] {
   margin-top: 10px;
   transform: scale(2);
+}
+
+#addForm {
+  padding: 1rem;
+  border: 1px solid royalblue;
 }
 
 #editForm .date-priority {
