--- a/src/style.css
+++ b/src/style.css
@@ -14,11 +14,11 @@ form {
   gap: 1rem;
   width: 100%;
   display: flex;
+  flex: 0 0 auto;
   padding: 0.5rem;
   overflow: hidden;
   border-radius: 10px;
   flex-direction: column;
-  flex: 0 0 auto;
 }
 
 button {
@@ -68,7 +68,6 @@ select {
 
 #menu ul {
   gap: 1rem;
-  width: 300;
   display: flex;
   font-size: 20px;
   margin-top: 1rem;
@@ -145,6 +144,10 @@ select {
   transform: scale(2);
 }
 
+#date {
+  width: 7rem;
+}
+
 #addForm {
   padding: 1rem;
   border: 1px solid royalblue;
@@ -152,13 +155,14 @@ select {
 
 #editForm .date-priority {
   all: unset;
-  gap: 1rem;
+  gap: .5rem;
   display: flex;
+  justify-content: end;
 }
 
 #editForm .buttons {
   all: unset;
-  gap: 1rem;
+  gap: .5rem;
   display: flex;
 }
 
@@ -212,7 +216,7 @@ select {
   background: royalblue;
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1000px) {
 
   body {
     flex-direction: column;
@@ -254,22 +258,19 @@ select {
   }
 
   #date {
-    width: 4.3rem;
+    width: 4.2rem;
   }
 
   #editForm #priority {
     width: 2.6rem;
-    justify-self: end;
   }
 
   #editForm .date-priority {
     gap: 0.4rem;
     padding: 0 3px;
-    justify-content: start;
   }
 
-    #editForm .buttons {
+  #editForm .buttons {
     gap: 0.4rem;
-    justify-content: start;
   }
 }
